Closed Bug 1638246 Opened 3 years ago Closed 3 years ago

[MIPS] Fix build failures on MIPS (error: call to deleted member function 'branchTestGCThing)

Categories

(Core :: JavaScript Engine: JIT, defect)

Other
Unspecified
defect

Tracking

()

RESOLVED FIXED
mozilla78
Tracking Status
firefox78 --- fixed

People

(Reporter: zhaojiazhong-hf, Assigned: zhaojiazhong-hf)

References

(Blocks 1 open bug)

Details

Attachments

(2 files)

Failed to build js on MIPS64el platform due to some changes in bug 1636916, got error messages:

/home/loongson/disk/firefox-central/js/src/jit/mips64/MacroAssembler-mips64.cpp:2019:3: error: call to deleted member function 'branchTestGCThing'
branchTestGCThing(Assembler::NotEqual, value,
^~~~~~~~~~~~~~~~~
......
/home/loongson/disk/firefox-central/js/src/jit/mips64/MacroAssembler-mips64.cpp:2022:28: error: no viable conversion from 'js::jit::ValueOperand' to 'const js::jit::Address'
unboxGCThingForGCBarrier(value, temp);
^~~~~
......
/home/loongson/disk/firefox-central/js/src/jit/mips64/MacroAssembler-mips64.cpp:2023:31: error: use of undeclared identifier 'scratch2'
orPtr(Imm32(gc::ChunkMask), scratch2);
^

Assignee: nobody → zhaojiazhong-hf
Depends on: 1636916
Pushed by rmaries@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a559275d075c
[MIPS] Add branchTestGCThing, unboxGCThingForGCBarrier and fix branchValueIsNurseryCell. r=jandem
Status: UNCONFIRMED → RESOLVED
Closed: 3 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla78
Pushed by apavel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/4366818635f2
[MIPS64] Fix register conflicts in branchValueIsNurseryCellImpl. r=tcampbell
You need to log in before you can comment on or make changes to this bug.