Bug 1638246 - [MIPS] Add branchTestGCThing, unboxGCThingForGCBarrier and fix branchValueIsNurseryCell. r=jandem

Differential Revision: https://phabricator.services.mozilla.com/D75479